--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <img height="230" src="1.png" alt="Train image">
+    <img height="230" src=".png" alt="Train image">
     <img height="230" src="2.png" alt="spice boy">
     <br>
     <table>
