--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-    <img height="230" src=".png" alt="Train image">
-    <img height="230" src="2.png" alt="spice boy">
+    <img height="230" src="1.png" alt="Train image">
     <br>
     <table>
         <caption>Employee Details</caption>
