--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Images</title>
+    <title> spicy-boy Images</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,7 +16,7 @@
         <thead>
             <tr>
                 <th>Name</th>
-                <th>father name</th>
+                <th>father name</th>o
                 <th>nic name</th>
             </tr>
         </thead>
