--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <thead>
             <tr>
                 <th>Name</th>
-                <th>father name</th>o
+                <th>father name</th>
                 <th>nic name</th>
             </tr>
         </thead>
